--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">VInos</string>
+    <string name="edit">Edit</string>
+    <string name="add">add</string>
+    <string name="title_activity_edit_vinos">EditVinos</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="button_write_extern">Write Extern</string>
+    <string name="button_write_intern">Write intern</string>
+    <string name="button_read_extern">Read Extern</string>
+    <string name="button_read_intern">Read Intern</string>
+    <string name="message_ok">Value has been written</string>
+    <string name="message_no">Value has not been written</string>
+    <string name="read_ok">""File without content""</string>
+    <string name="read_no">File could not be read</string>
+    <string name="file_name">archivo.txt</string>
 </resources>
