Desarrollamos el layout de las ultimas actividades incluidas y terminamos de retocar la clase csv para que nos permita leer y escribir archivos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,14 @@
     <string name="read_ok">""File without content""</string>
     <string name="read_no">File could not be read</string>
     <string name="file_name">archivo.txt</string>
+    <string name="check_id">Introduce un Id de vino</string>
+    <string name="checar_id">CLICK</string>
+    <string name="btcancelar">cancelar</string>
+    <string name="btaceptar">aceptar</string>
+    <string name="nombre">Nombre</string>
+    <string name="bodega">Bodega</string>
+    <string name="color">Color</string>
+    <string name="origen">Origen</string>
+    <string name="fecha">Fecha</string>
+    <string name="graduacion">Graduación</string>
 </resources>
