Ya podemos comparar los id en la pantalla principal, también podemos pasar la información de nuestro archivo a un array

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="origen">Origen</string>
     <string name="fecha">Fecha</string>
     <string name="graduacion">Graduación</string>
+    <string name="btborrar">borrar</string>
+    <string name="comrpuebaid">Comprobar id existente</string>
 </resources>
